--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,17 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="back_text">Back</string>
+    <string name="pg">13+</string>
+    <string name="name">Avengers:\nEnd Game</string>
+    <string name="tag">Action, Adventure, Fantasy</string>
+    <string name="reviews">125 Reviews</string>
+    <string name="storyline_head">Storyline</string>
+    <string name="storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
+    <string name="cast">Cast</string>
+    <string name="cast_1_text">Robert Downey Jr.</string>
+    <string name="cast_2_text">Chris Evans</string>
+    <string name="cast_3_text">Mark  Ruffalo</string>
+    <string name="cast_4_text">Chris Hemsworth</string>
+    <string name="btn">Жми!!!</string>
 </resources>
